--- a/.github/workflows/validate-bicep.yaml
+++ b/.github/workflows/validate-bicep.yaml
@@ -9,6 +9,11 @@ on:
     branches:
       - edge
       - v*
+  push:
+    branches:
+      - edge
+      - v*
+
 jobs:
   build:
     name: Validate Bicep Code
@@ -26,7 +31,7 @@ jobs:
       run: python ./.github/scripts/get_release_version.py
     - name: Download rad-bicep
       run: |
-        ./.github/scripts/curl-with-retries.sh https://radiuspublic.blob.core.windows.net/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
+        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
         chmod +x rad-bicep
         ./rad-bicep --version
     - name: Verify Bicep files
