--- a/.github/workflows/validate-bicep.yaml
+++ b/.github/workflows/validate-bicep.yaml
@@ -4,6 +4,7 @@
 # ------------------------------------------------------------
 
 name: Validate Bicep Code
+
 on:
   pull_request:
     branches:
@@ -14,8 +15,12 @@ on:
       - edge
       - v*
 
+concurrency:
+  group: validate-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
+
 jobs:
-  build:
+  validate:
     name: Validate Bicep Code
     runs-on: ubuntu-latest
     steps:
@@ -38,3 +43,8 @@ jobs:
       run: ./.github/scripts/validate-bicep.sh
       env: 
         BICEP_PATH: .
+    - name: Write error to summary
+      if: ${{ failure() }}
+      run: |
+        echo "## Bicep validation failed" >> $GITHUB_STEP_SUMMARY
+        echo "One or more Bicep files have failed validation. Please ensure you do not have any Bicep errors. Refer to ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }} for more information. " >> $GITHUB_STEP_SUMMARY
