--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -20,8 +20,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  publish:
-    name: Publish Recipes
+  publish-dev:
+    name: Publish Recipes to Dev ACR
     runs-on: ubuntu-latest
     steps:
     - name: Check out repo
@@ -44,6 +44,41 @@ jobs:
         BICEP_PATH: .
       run: |
         echo "## Recipes published to Dev ACR" >> $GITHUB_STEP_SUMMARY
+        for recipe in $(find . -type f -name "*.bicep"); do
+          export FILE_NAME=$(basename $recipe | cut -d. -f1)
+          export DIR_NAME=$(dirname $recipe | cut -d/ -f2)
+          echo "Publishing $FILE_NAME Recipe from $recipe"
+          echo "- radiusdev.azurecr.io/recipes/$DIR_NAME/$FILE_NAME:$REL_VERSION" >> $GITHUB_STEP_SUMMARY
+          ./rad-bicep publish $recipe --target br:radiusdev.azurecr.io/recipes/$DIR_NAME/$FILE_NAME:$REL_VERSION
+        done
+
+  publish-prod:
+    name: Publish Recipes to Prod ACR
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/edge'
+    environment: 
+      name: Public
+    steps:
+    - name: Check out repo
+      uses: actions/checkout@v3
+    - name: az CLI login
+      run: |
+        az login --service-principal \
+          --username ${{ secrets.AZURE_SP_TESTS_APPID }} \
+          --password ${{ secrets.AZURE_SP_TESTS_PASSWORD }} \
+          --tenant ${{ secrets.AZURE_SP_TESTS_TENANTID }}
+    - name: Parse release version and set environment variables
+      run: python ./.github/scripts/get_release_version.py
+    - name: Download rad-bicep
+      run: |
+        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
+        chmod +x rad-bicep
+        ./rad-bicep --version
+    - name: Publish Recipes to Prod ACR
+      env: 
+        BICEP_PATH: .
+      run: |
+        echo "## Recipes published to Prod ACR" >> $GITHUB_STEP_SUMMARY
         for recipe in $(find . -type f -name "*.bicep"); do
           export FILE_NAME=$(basename $recipe | cut -d. -f1)
           export DIR_NAME=$(dirname $recipe | cut -d/ -f2)
