--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -44,6 +44,8 @@ jobs:
         chmod +x rad-bicep
         ./rad-bicep --version
     - name: Publish Recipes to Dev ACR
+      env: 
+        BICEP_PATH: .
       run: ./.github/scripts/publish-recipes.sh
 
   publish-prod:
@@ -72,4 +74,6 @@ jobs:
         chmod +x rad-bicep
         ./rad-bicep --version
     - name: Publish Recipes to Prod ACR
+      env: 
+        BICEP_PATH: .
       run: ./.github/scripts/publish-recipes.sh
