--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -46,8 +46,8 @@ jobs:
         BICEP_PATH: .
       run: ./.github/scripts/publish-recipes.sh
 
-  publish-prod:
-    name: Publish Recipes to Prod ACR
+  publish-public:
+    name: Publish Recipes to Public ACR
     runs-on: ubuntu-latest
     needs: publish-dev
     if: github.event_name == 'push' && github.ref == 'refs/heads/edge'
