--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -46,15 +46,17 @@ jobs:
         BICEP_PATH: .
       run: ./.github/scripts/publish-recipes.sh
 
+  # This is where we can add integration tests in the future
+
   publish-public:
     name: Publish Recipes to Public ACR
     runs-on: ubuntu-latest
     needs: publish-dev
-    if: github.event_name == 'push' && github.ref == 'refs/heads/edge'
+    if: github.event_name == 'push'
     environment: 
       name: Public
     env:
-      ACR_HOST: radiusdev.azurecr.io
+      ACR_HOST: radius.azurecr.io
     steps:
     - name: Check out repo
       uses: actions/checkout@v3
