--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -8,12 +8,10 @@ name: Publish Recipes
 on:
   pull_request:
     branches:
-      - edge
-      - v*
+      - main
   push:
     branches:
-      - edge
-      - v*
+      - main
 
 concurrency:
   group: publish-${{ github.event.pull_request.number || github.sha }}
@@ -45,6 +43,7 @@ jobs:
     - name: Publish Recipes to Dev ACR
       env: 
         BICEP_PATH: .
+        # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
         RECIPE_VERSION: ${{ env.REL_VERSION }}
       run: ./.github/scripts/publish-recipes.sh
 
@@ -77,7 +76,7 @@ jobs:
     name: Publish Recipes to Public ACR
     runs-on: ubuntu-latest
     needs: publish-dev
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment: 
       name: Public
     env:
