--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -71,7 +71,7 @@ jobs:
     name: Publish Recipes to Public ACR
     runs-on: ubuntu-latest
     needs: publish-dev
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push'
     environment: 
       name: Public
     env:
