--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -23,6 +23,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - v*
 
 concurrency:
   group: publish-${{ github.event.pull_request.number || github.sha }}
