--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -101,7 +101,7 @@ jobs:
       run: python ./.github/scripts/get_release_version.py
     - name: Download rad-bicep
       run: |
-        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
+        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/edge/linux-x64/rad-bicep --output rad-bicep
         chmod +x rad-bicep
         ./rad-bicep --version
     - name: Publish Recipes to Prod ACR
