--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -105,4 +105,8 @@ jobs:
         chmod +x rad-bicep
         ./rad-bicep --version
     - name: Publish Recipes to Prod ACR
-      run: ./.github/scripts/publish-recipes.sh . radius.azurecr.io ${{ env.REL_TAG }}
+      run: | 
+        ./.github/scripts/publish-recipes.sh . radius.azurecr.io ${{ env.REL_CHANNEL }}
+        if [ "${{ env.REL_TAG }}" != "${{ env.REL_CHANNEL }}" ]; then
+          ./.github/scripts/publish-recipes.sh . radius.azurecr.io ${{ env.REL_TAG }}
+        fi
