--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -31,6 +31,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  RAD_CLI_URL: https://get.radapp.dev/tools/rad/install.sh
   GITHUB_TOKEN: ${{ secrets.GH_RAD_CI_BOT_PAT }}
 
 jobs:
@@ -43,14 +44,13 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
-    - name: Download rad-bicep
+    - name: Download rad CLI
       run: |
-        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
-        chmod +x rad-bicep
-        ./rad-bicep --version
+        echo "Downloading edge rad CLI"
+        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
     - name: Publish Recipes to Dev GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
-      run: ./.github/scripts/publish-recipes.sh . radius-project ${{ env.REL_VERSION }}
+      run: ./.github/scripts/publish-recipes.sh radius-project ${{ env.REL_VERSION }}
 
   delete-dev:
     name: Delete Dev GHCR Images
@@ -63,6 +63,7 @@ jobs:
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
     - name: Delete Dev GHCR Images
+      # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
       run: ./.github/scripts/delete-recipes.sh radius-project ${{ env.REL_VERSION }}
 
   # This is where we can add integration tests in the future
