--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -31,6 +31,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
+  GHCR_ACTOR: rad-ci-bot
   RAD_CLI_URL: https://get.radapp.dev/tools/rad/install.sh
   GITHUB_TOKEN: ${{ secrets.GH_RAD_CI_BOT_PAT }}
 
@@ -48,6 +49,12 @@ jobs:
       run: |
         echo "Downloading edge rad CLI"
         wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ env.GHCR_ACTOR }}
+        password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
     - name: Publish Recipes to Dev GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
       run: ./.github/scripts/publish-recipes.sh radius-project ${{ env.REL_VERSION }}
