--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -37,7 +37,7 @@ env:
 
 jobs:
   publish-dev:
-    name: Publish Recipes to Dev GHCR
+    name: Publish Recipes to GHCR - Dev
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.action != 'closed'
     steps:
@@ -55,12 +55,12 @@ jobs:
         registry: ghcr.io
         username: ${{ env.GHCR_ACTOR }}
         password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
-    - name: Publish Recipes to Dev GHCR
+    - name: Publish Recipes to GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
-      run: ./.github/scripts/publish-recipes.sh radius-project ${{ env.REL_VERSION }}
+      run: ./.github/scripts/publish-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
 
   delete-dev:
-    name: Delete Dev GHCR Images
+    name: Delete GHCR recipes - Dev
     runs-on: ubuntu-latest
     needs: publish-dev
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
@@ -69,33 +69,38 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
-    - name: Delete Dev GHCR Images
+    - name: Delete Recipes from GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
-      run: ./.github/scripts/delete-recipes.sh radius-project ${{ env.REL_VERSION }}
+      run: ./.github/scripts/delete-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
 
   # This is where we can add integration tests in the future
 
   publish-public:
-    name: Publish Recipes to Public ACR
+    name: Publish Recipes to GHCR - Public
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     environment: 
       name: Public
-    env:
-      ACR_HOST: radius.azurecr.io
     steps:
     - name: Check out repo
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
-    - name: Download rad-bicep
+    - name: Download rad CLI
       run: |
-        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/edge/linux-x64/rad-bicep --output rad-bicep
+        echo "Downloading edge rad CLI"
+        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
         chmod +x rad-bicep
         ./rad-bicep --version
-    - name: Publish Recipes to Prod ACR
-      run: | 
-        ./.github/scripts/publish-recipes.sh . radius.azurecr.io ${{ env.REL_CHANNEL }}
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ env.GHCR_ACTOR }}
+        password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
+    - name: Publish Recipes to GHCR
+      run: |
+        ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_CHANNEL }}
         if [ "${{ env.REL_TAG }}" != "${{ env.REL_CHANNEL }}" ]; then
-          ./.github/scripts/publish-recipes.sh . radius.azurecr.io ${{ env.REL_TAG }}
+          ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_TAG }}
         fi
