--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -95,7 +95,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ env.GHCR_ACTOR }}
+        username: ${{ github.actor }}
         password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
     - name: Publish Recipes to GHCR
       run: |
