--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -31,7 +31,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GHCR_ACTOR: rad-ci-bot
   RAD_CLI_URL: https://get.radapp.dev/tools/rad/install.sh
 
 jobs:
@@ -52,8 +51,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ env.GHCR_ACTOR }}
-        password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish Recipes to GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
       run: ./.github/scripts/publish-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
@@ -68,6 +67,12 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Delete Recipes from GHCR
       # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
       run: ./.github/scripts/delete-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
@@ -96,7 +101,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GH_RAD_CI_BOT_PAT }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Publish Recipes to GHCR
       run: |
         ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_CHANNEL }}
