--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -36,8 +36,11 @@ env:
 jobs:
   publish-dev:
     name: Publish Recipes to GHCR - Dev
-    runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
     - name: Check out repo
       uses: actions/checkout@v3
@@ -59,9 +62,12 @@ jobs:
 
   delete-dev:
     name: Delete GHCR recipes - Dev
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
     needs: publish-dev
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    permissions:
+      contents: read
+      packages: write
     steps:
     - name: Check out repo
       uses: actions/checkout@v3
@@ -80,11 +86,14 @@ jobs:
   # This is where we can add integration tests in the future
 
   publish-public:
+    if: github.event_name != 'pull_request'
     name: Publish Recipes to GHCR - Public
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
     environment: 
       name: Public
+    permissions:
+      contents: read
+      packages: write
     steps:
     - name: Check out repo
       uses: actions/checkout@v3
