--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -31,7 +31,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  RAD_CLI_URL: https://get.radapp.dev/tools/rad/install.sh
+  RAD_CLI_URL: https://raw.githubusercontent.com/radius-project/radius/main/deploy/install.sh
 
 jobs:
   publish-dev:
@@ -46,10 +46,10 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
-    - name: Download rad CLI
+    - name: Download latest rad CLI
       run: |
-        echo "Downloading edge rad CLI"
-        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
+        echo "Downloading latest rad CLI"
+        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
