--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,9 @@ jobs:
           else
             RUN_TEST=true
           fi
+          # Set output variables to be used in the other jobs
+          echo "RUN_IDENTIFIER=${RUN_IDENTIFIER}" >> $GITHUB_OUTPUT
+          echo "RUN_TEST=${RUN_TEST}" >> $GITHUB_OUTPUT
       - name: Setup Node
         if: steps.gen-id.outputs.RUN_TEST == 'true'
         uses: actions/setup-node@v3
