--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,7 +58,7 @@ jobs:
           if [[ -z "${{ inputs.version }}" ]]; then
               RADIUS_VERSION=edge
           fi
-          ./.github/scripts/install-radius.sh $RADIUS_VERSION
+          ./.github/scripts/install.sh $RADIUS_VERSION
       - name: Publish Recipes
         if: steps.gen-id.outputs.RUN_TEST == 'true'
         run: |
