--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,11 +54,16 @@ jobs:
       - name: Download rad CLI
         if: steps.gen-id.outputs.RUN_TEST == 'true'
         run: |
-          RADIUS_VERSION="${{ inputs.version }}"
-          if [[ -z "${{ inputs.version }}" ]]; then
-              RADIUS_VERSION=edge
-          fi
-          ./.github/scripts/install-radius.sh $RADIUS_VERSION
+          # RADIUS_VERSION="${{ inputs.version }}"
+          # if [[ -z "${{ inputs.version }}" ]]; then
+          #     RADIUS_VERSION=edge
+          # fi
+          # ./.github/scripts/install-radius.sh $RADIUS_VERSION
+          RAD_CLI_EDGE_URL=ghcr.io/radius-project/rad/linux-amd64:latest
+          echo Downloading rad CLI edge version
+          oras pull $RAD_CLI_EDGE_URL
+          chmod +x ./rad
+          mv ./rad /usr/local/bin/rad
       - name: Publish Recipes
         if: steps.gen-id.outputs.RUN_TEST == 'true'
         run: |
