--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -69,7 +69,8 @@ jobs:
           files_list=$(ls "local-dev")
           for file in $files_list; do
             echo "Publishing recipe: local-dev/$file"
-            rad bicep publish --file local-dev/$file --target br:localhost:51351/recipes/local-dev/$file:latest --plain-http
+            recipeName="${file%.*}"
+            rad bicep publish --file local-dev/$file --target br:localhost:51351/recipes/local-dev/$recipeName:latest --plain-http
           done
       - name: Initialize default environment
         if: steps.gen-id.outputs.RUN_TEST == 'true'
@@ -80,6 +81,20 @@ jobs:
           rad group switch default
           rad env create default
           rad env switch default
+      - name: Running local-dev recipe Tests
+        if: steps.gen-id.outputs.RUN_TEST == 'true'
+        run: |
+          files_list=$(ls "tests")
+          for file in $files_list; do
+            testFile=tests/$file
+            echo "Deploying bicep file $testFile"
+            rad deploy $testFile" --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+
+            # echo "Waiting for pods to be ready"
+            # namespace="${{ matrix.env }}-${{ matrix.app }}"
+            # label="radapp.io/application=${{ matrix.app }}"
+            # kubectl wait --for=condition=Ready pod -l $label -n $namespace --timeout=5m
+          done
           
       
   
