--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -88,7 +88,7 @@ jobs:
           for file in $files_list; do
             testFile=tests/$file
             echo "Deploying bicep file $testFile"
-            rad deploy $testFile" --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"            
+            rad deploy $testFile --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
           done
           
       
