adding all tests
Signed-off-by: Vishwanath Hiremath <vhiremath@microsoft.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -89,6 +89,7 @@ jobs:
             testFile=tests/$file
             echo "Deploying bicep file $testFile"
             rad deploy $testFile --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+            echo "==========================="
           done
           
       
