--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,6 +41,16 @@ jobs:
             app: msgrp-resources-rabbitmq-recipe
             namespace: msgrp-resources-rabbitmq-default-recipe-app
             path: ./tests/rabbitmqqueues.bicep
+            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest" --parameters "password=guest"
+          - name: rabbitmqqueues
+            app: msgrp-resources-rabbitmq-recipe
+            namespace: msgrp-resources-rabbitmq-default-recipe-app
+            path: ./tests/rabbitmqqueues.bicep
+            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          - name: secretstores
+            app: daprrp-rs-secretstore-recipe
+            namespace: daprrp-rs-secretstore-recipe
+            path: ./tests/secretstores.bicep
             args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
     steps:
       - name: Generate output variables
