--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,12 +41,7 @@ jobs:
             app: msgrp-resources-rabbitmq-recipe
             namespace: msgrp-resources-rabbitmq-default-recipe-app
             path: ./tests/rabbitmqqueues.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest" --parameters "password=guest"
-          - name: rabbitmqqueues
-            app: msgrp-resources-rabbitmq-recipe
-            namespace: msgrp-resources-rabbitmq-default-recipe-app
-            path: ./tests/rabbitmqqueues.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest" --parameters password="guest"
           - name: secretstores
             app: daprrp-rs-secretstore-recipe
             namespace: daprrp-rs-secretstore-recipe
