--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,21 +32,26 @@ jobs:
           #   namespace: dsrp-resources-mongodb-recipe-app
           #   path: ./tests/mongodatabases.bicep
           #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          - name: sqldatabases
+            app: dsrp-resources-sqldb-recipe
+            namespace: dsrp-resources-sqldb-recipe-app
+            path: ./tests/sqldatabases.bicep
+            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
           # - name: rediscaches
           #   app: dsrp-resources-redis-recipe
           #   namespace: dsrp-resources-redis-recipe-app
           #   path: ./tests/rediscaches.bicep
           #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
-          - name: rabbitmqqueues
-            app: msgrp-resources-rabbitmq-recipe
-            namespace: msgrp-resources-rabbitmq-default-recipe-app
-            path: ./tests/rabbitmqqueues.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
-          - name: secretstores
-            app: daprrp-rs-secretstore-recipe
-            namespace: daprrp-rs-secretstore-recipe
-            path: ./tests/secretstores.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          # - name: rabbitmqqueues
+          #   app: msgrp-resources-rabbitmq-recipe
+          #   namespace: msgrp-resources-rabbitmq-default-recipe-app
+          #   path: ./tests/rabbitmqqueues.bicep
+          #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          # - name: secretstores
+          #   app: daprrp-rs-secretstore-recipe
+          #   namespace: daprrp-rs-secretstore-recipe
+          #   path: ./tests/secretstores.bicep
+          #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
     steps:
       - name: Generate output variables
         id: gen-id
