--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,15 +52,15 @@ jobs:
           #   namespace: daprrp-rs-secretstore-recipe
           #   path: ./tests/secretstores.bicep
           #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
-          - name: statestores
-            app: daprrp-rs-sts-recipe
-            namespace: daprrp-rs-sts-recipe
-            path: ./tests/statestores.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          # - name: statestores
+          #   app: daprrp-rs-sts-recipe
+          #   namespace: daprrp-rs-sts-recipe
+          #   path: ./tests/statestores.bicep
+          #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
           - name: pubsubbrokers
             app: dpsb-recipe-app
             namespace: dpsb-recipe-app
-            path: ./tests/statestores.bicep
+            path: ./tests/pubsubbrokers.bicep
             args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
 
     steps:
