--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,11 +42,11 @@ jobs:
           #   namespace: dsrp-resources-redis-recipe-app
           #   path: ./tests/rediscaches.bicep
           #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
-          # - name: rabbitmqqueues
-          #   app: msgrp-resources-rabbitmq-recipe
-          #   namespace: msgrp-resources-rabbitmq-default-recipe-app
-          #   path: ./tests/rabbitmqqueues.bicep
-          #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          - name: rabbitmqqueues
+            app: msgrp-resources-rabbitmq-recipe
+            namespace: msgrp-resources-rabbitmq-default-recipe-app
+            path: ./tests/rabbitmqqueues.bicep
+            args: --parameters magpieimage="reciperegistry:5000/magpiego:latest"
           # - name: secretstores
           #   app: daprrp-rs-secretstore-recipe
           #   namespace: daprrp-rs-secretstore-recipe
@@ -57,11 +57,11 @@ jobs:
           #   namespace: daprrp-rs-sts-recipe
           #   path: ./tests/statestores.bicep
           #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
-          - name: pubsubbrokers
-            app: dpsb-recipe-app
-            namespace: dpsb-recipe-app
-            path: ./tests/pubsubbrokers.bicep
-            args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
+          # - name: pubsubbrokers
+          #   app: dpsb-recipe-app
+          #   namespace: dpsb-recipe-app
+          #   path: ./tests/pubsubbrokers.bicep
+          #   args: --parameters magpieimage="radiusdev.azurecr.io/magpiego:latest"
 
     steps:
       - name: Generate output variables
@@ -121,6 +121,12 @@ jobs:
           rad group switch default
           rad env create default
           rad env switch default
+      - name: Build Magpie image
+        if: steps.gen-id.outputs.RUN_TEST == 'true'
+        run: |
+          docker build -t magpie .
+          docker tag magpie:latest localhost:51351/magpie:latest
+          docker push localhost:51351/magpie:latest
       - name: Running local-dev recipe Tests
         if: steps.gen-id.outputs.RUN_TEST == 'false'
         run: |
